Fixing up issues reported in github: calendar plugin (invisible text), first pass at Kanban support, accent colors on lists, and slight adjustment to padding in navigation.

--- a/src/scss/app/file-navigator.scss
+++ b/src/scss/app/file-navigator.scss
@@ -15,6 +15,11 @@
   .nav-folder-title:hover svg {
     color: var(--color-base-00);
   }
+
+  --nav-item-padding: 4px;
+  .nav-file-title {
+    padding: 6px var(--nav-item-padding) var(--nav-item-padding) var(--nav-item-padding);
+  }
 }
 
 .theme-dark {
