--- a/src/scss/plugins/calendar.scss
+++ b/src/scss/plugins/calendar.scss
@@ -1,17 +1,40 @@
 /* Add support for [Calendar plugin](https://github.com/liamcain/obsidian-calendar-plugin) */
-#calendar-container {
-  --color-background-heading: transparent;
+.theme-light {
+  #calendar-container {
+    --color-background-heading: transparent;
+  
+    --color-background-day: transparent;
+    --color-background-day-empty: transparent;
+    --color-background-day-active: var(--background-nav-selected);
+    --color-background-day-hover: var(--background-nav-alt);
+  
+    --color-dot: var(--text-nav);
+    --color-arrow: var(--text-nav);
+  
+    --color-text-title: var(--text-faint);
+    --color-text-heading: var(--text-faint);
+    
+    --color-text-day: var(--nav-item-color);
+    --color-text-today: var(--color-accent);
+  }  
+}
 
-  --color-background-day: transparent;
-  --color-background-day-empty: transparent;
-  --color-background-day-active: var(--background-nav-selected);
-  --color-background-day-hover: var(--background-nav-alt);
+.theme-dark {
+  #calendar-container {
+    --color-background-heading: transparent;
+  
+    --color-background-day: transparent;
+    --color-background-day-empty: transparent;
+    --color-background-day-active: var(--background-nav-selected);
+    --color-background-day-hover: var(--background-nav-alt);
+  
+    --color-dot: var(--text-nav);
+    --color-arrow: var(--text-nav);
+  
+    --color-text-title: var(--text-faint);
+    --color-text-heading: var(--text-faint);
 
-  --color-dot: var(--text-nav);
-  --color-arrow: var(--text-nav);
-
-  --color-text-title: var(--text-faint);
-  --color-text-heading: var(--text-faint);
-  --color-text-day: var(--text-nav);
-  --color-text-today: var(--text-nav-selected);
+    --color-text-day: var(--nav-item-color);
+    --color-text-today: var(--color-accent);
+  }   
 }
